# retroarch-faster-playslist-indexer

./: .gitignore  CLAUDE.md  Cargo.toml  LEGAL_COMPLIANCE.md  LICENSE  README-de.md  README-en.md  README-es.md  README-fr.md  README-ja.md  README-pt.md  README-ru.md  README-zh.md  README.md  STATUS.md  build-all.ps1  build-all.sh  check-binaries.ps1  check-binaries.sh  config.example.toml  config.toml  test.ps1
configs/: cores.toml  platforms.toml  systems.toml
locales/: de.ftl  en.ftl  es.ftl  es_new.ftl  fr.ftl  fr_new.ftl  ja.ftl  ja_new.ftl  pt.ftl  ru.ftl  ru_new.ftl  zh.ftl  zh_new.ftl
src/: archive.rs  cache.rs  cli.rs  config.rs  converter.rs  core_mapper.rs  crc32.rs  dat_downloader.rs  dat_parser.rs  deduplicator.rs  error.rs  i18n.rs  i18n_fixed.rs  i18n_new.rs  i18n_old.rs  i18n_simple.rs  lib.rs  main.rs  mame_xml.rs  platform.rs  playlist.rs  scanner.rs  thread_monitor.rs  validator.rs  watch.rs
tests/: dat_parser_tests.rs  debug_dat_test.rs  debug_multiline_test.rs  integration_tests.rs  multi_game_debug.rs  simple_dat_test.rs
