[package]
name = "retroarch-fast-indexer"
version = "1.3.1"
edition = "2024"
authors = ["RetroArch Fast Indexer Team"]
description = "Um indexador universal de ROMs de alta performance para RetroArch"
license = "MIT"
repository = "https://github.com/seu-usuario/retroarch-fast-indexer"
keywords = ["retroarch", "roms", "playlist", "indexer", "emulation"]
categories = ["command-line-utilities", "games"]

[[bin]]
name = "retroarch-indexer"
path = "src/main.rs"

[dependencies]
# Core async and parallel processing
rayon = "1.10.0"
tokio = { version = "1.40.0", features = ["full"] }

# Serialization and data handling
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
toml = "0.8.0"

# File system and path handling
walkdir = "2.5.0"
glob = "0.3.0"

# CRC32 calculation
crc32fast = "1.4"

# Command line interface
clap = { version = "4.5.0", features = ["derive", "env"] }

# Terminal UI and progress
colored = "3.0.0"
indicatif = { version = "0.18.0", features = ["rayon"] }

# User input
dialoguer = "0.11.0"

# Error handling
anyhow = "1.0.0"
thiserror = "2.0.12"

# Archive handling - ENABLED for v1.3 with Rust 2024 (ZIP and 7z support)
zip = { version = "4.2.0", optional = true }
sevenz-rust = { version = "0.6.1", optional = true }

# Data structures
dashmap = "6.0.0"

# Logging
log = "0.4.0"
env_logger = "0.11.0"

# Platform detection
cfg-if = "1.0.0"

# Date and time
chrono = { version = "0.4.31", features = ["serde"] }

# Regex
regex = "1.10.0"

# HTTP client for DAT downloads - ENABLED for v1.3 with Rust 2024
reqwest = { version = "0.12", features = ["json"], optional = true }

# Additional utilities
num_cpus = "1.16.0"
dirs = "6.0.0"

# File system watching - ENABLED for v1.3 with Rust 2024
notify = { version = "8.1.0", optional = true }

# Cryptography for checksums - ENABLED for v1.3 with Rust 2024
md5 = { version = "0.8.0", optional = true }
sha2 = { version = "0.10.0", optional = true }

# Force compatible versions to avoid edition2024 issues
# [dependencies.base64ct]
# version = "1.6"

# [dependencies.crypto-common]
# version = "0.1"

[dev-dependencies]
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 1
debug = true

[features]
default = []
archive-support = ["zip", "sevenz-rust"]  # ZIP and 7z support for v1.3
dat-download = ["reqwest", "md5", "sha2"]     # Now enabled with Rust 2024
watch-mode = ["notify"]                    # Now enabled with Rust 2024
checksums = ["md5", "sha2"]                # Additional checksum algorithms
full = ["archive-support", "dat-download", "watch-mode", "checksums"]
